--- a/public/index.html
+++ b/public/index.html
@@ -5,10 +5,7 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
-    />
+    <meta name="Docs Pizza" content="Docs Pizza Main Website" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
@@ -24,7 +21,13 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>Doc's Pizza</title>
+    <meta
+      property="og:image"
+      content="https://res.cloudinary.com/dndx9szw0/image/upload/v1706210491/Untitled_4_al8hgi.png"
+    />
+    <meta property="og:title" content="Doc's Pizza" />
+    <meta property="og:description" content="The Best Pizza in Idaho!" />
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
